feat: Implement core backend infrastructure including persistence, application services, security, messaging, and database migrations across multiple modules.